
    o	The postscript output makes use of relative moves, and so is
	somewhat more compact.

    o	New function md5sum() in package tools to calculate MD5
	checksums on files (e.g. on parts of the R installation).

    o   list.files()/dir() have a new argument `recursive'.

    o	New function gzcon() which wraps a connection and provides
	(de)compression compatible with gzip.

    o	%*% and crossprod() for complex arguments make use of BLAS
	routines and so may be much faster on some platforms.

    o	chol() and chol2inv() now use LAPACK routines by default.

    o	La.chol() and La.chol2inv() now give interpretable error
	messages rather than LAPACK error codes.

    o	qr() now has the option to use LAPACK routines, and the
	results can be used by the helper routines qr.coef(), qr.qy()
	and qr.qty().  The LAPACK-using versions may be much faster
	for large matrices (using an optimized BLAS) but are less
	flexible.

    o	Generic function confint() and `lm' method (formerly in
	package MASS).


INSTALLATION CHANGES

    o	TITLE files in packages are no longer used, the Title field
	in the DESCRIPTION file being preferred.  TITLE files will be
	ignored in both installed packages and source packages.

    o	When searching for a Fortran 77 compiler, configure by default
	now also looks for Fujitsu's frt and Compaq's fort, but no
	longer for cf77 and cft77.

    o	Configure checks that mixed C/Fortran code can be run before
	checking compatibility on ints and doubles: the latter test
	was sometimes failing because the Fortran libraries were not
	found.

    o	PCRE and bzip2 are built from versions in the R sources if the
	appropriate library is not found.

    o	New configure option --with-lapack to allow high-performance
	LAPACK libraries to be used: a generic LAPACK library will be
	used if found.	This option is not the default.

    o	New configure options --with-libpng, --with-jpeglib, --with-zlib,
	--with-bzlib and --with-pcre, principally to allow these